[project]
name = "sparculing"
version = "0.1.0"
description = ""
authors = [
    {name = "Sigurd Hofsmo Jakobsen", email = "sigurd.jakobsen@sintef.no"},
]
dependencies = [
    "dynpssimpy @ git+https://github.com/hallvar-h/dynpssimpy",
]
requires-python = ">=3.10"
license = {text = "LGPL"}

[project.optional-dependencies]
examples = [
    "jupyterlab>=3.6.3",
    "ipykernel>=6.22.0",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[tool.pdm.scripts]
format-code = "black src"
lab = ".venv/bin/jupyter-lab"
